--- a/index.html
+++ b/index.html
@@ -36,6 +36,31 @@
             <a class="design-btn" target="_blank" href="https://www.facebook.com/SudiptoJU">Contact Me</a>
         </div>
     </section>
+    <section>
+        <div id="my-recipies">
+            <h2>My Recipies</h2>
+            <p>I have Thousands Of Recipies of my own, if you want <br> to reach them please visit my website and you
+                will
+                have <br> free access to them and how to cook them.</p>
+        </div>
+        <div class="flex-container my-recipies">
+            <div class="half-width box-shadow">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h2>Burger</h2>
+                <p>It's Delicious and tasty when you love it you <br> should try good foods <b>Burger</b></p>
+            </div>
+            <div class="half-width box-shadow">
+                <img src="images/food/Project Cover.png" alt="">
+                <h2>Fried chicken</h2>
+                <p>It's Delicious and tasty when you love it you <br> should try good foods <b>Fried chicken</b> </p>
+            </div>
+            <div class="half-width box-shadow">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h2>French fries</h2>
+                <p>It's Delicious and tasty when you love it you <br> should try good foods <b>French fries</b> </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
