--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
             </div>
         </div>
     </section>
+    <section class="digital-counter">
+        <div class="digital-count-size">
+            <h2>700k</h2>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="digital-count-size">
+            <h2>2.4m</h2>
+            <p>Instagram Folowers</p>
+        </div>
+        <div class="digital-count-size">
+            <h2>100k</h2>
+            <p>Dribble Shots Likes</p>
+        </div>
+    </section>
+    <footer class="footer-text">
+        <h1>Good Food</h1>
+        <p>Eat Delicious Food, And Be Healthy.</p>
+    </footer>
 </body>
 
 </html>
