--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <p>Dribble Shots Likes</p>
         </div>
     </section>
-    <footer class="footer-text">
-        <h1>Good Food</h1>
+    <footer>
+        <h2><s id="orange-text"> Good</s> <s id="gray-text">Food</s> </h2>
         <p>Eat Delicious Food, And Be Healthy.</p>
     </footer>
 </body>
